--- a/apps/frontend/src/app/components/dashboardWidgets/weatherWidget/weather-widget.component.html
+++ b/apps/frontend/src/app/components/dashboardWidgets/weatherWidget/weather-widget.component.html
@@ -1,8 +1,4 @@
-<div
-  id="clickBlock"
-  class="stuff"
-  [ngStyle]="{ height: componentHeight + 'px' }"
->
+<div id="clickBlock" class="stuff" [ngStyle]="{ height: componentHeight + 'px' }">
   <br />
 </div>
 <div id="weatherContainer">
