--- a/apps/frontend/src/app/components/documentWidget/document-widget.component.html
+++ b/apps/frontend/src/app/components/documentWidget/document-widget.component.html
@@ -17,11 +17,7 @@
   </div>
 
   <div class="action-bar-container">
-    <button
-      mat-raised-button
-      class="secondary-btn"
-      (click)="updateDocumentDialog()"
-    >
+    <button mat-raised-button class="secondary-btn" (click)="updateDocumentDialog()">
       Edit <mat-icon>https</mat-icon>
     </button>
     <button
