--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -31,14 +31,8 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
-      <button
-        mat-raised-button
-        class="action-btn"
-        (click)="openCheckoutCreateDialog()"
-      >
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button mat-raised-button class="action-btn" (click)="openCheckoutCreateDialog()">
         Add Check Out
       </button>
     </div>
