--- a/apps/frontend/src/app/pages/documents/documents.component.html
+++ b/apps/frontend/src/app/pages/documents/documents.component.html
@@ -29,11 +29,7 @@
       </mat-form-field>
     </div>
 
-    <button
-      mat-raised-button
-      class="action-btn"
-      (click)="openCreateDocumentDialog()"
-    >
+    <button mat-raised-button class="action-btn" (click)="openCreateDocumentDialog()">
       Add document <mat-icon>https</mat-icon>
     </button>
   </div>
