--- a/apps/frontend/src/app/pages/tasks/tasks.component.html
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.html
@@ -3,9 +3,7 @@
   <div class="table-actions">
     <h1>Morning</h1>
 
-    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-      Table info
-    </button>
+    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
   </div>
   <hr />
 
@@ -70,9 +68,7 @@
   <div class="table-actions">
     <h1>Evening</h1>
 
-    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-      Table info
-    </button>
+    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
   </div>
   <hr />
 
