--- a/apps/frontend/src/app/components/tableInfoDialog/table-info-dialog.component.html
+++ b/apps/frontend/src/app/components/tableInfoDialog/table-info-dialog.component.html
@@ -11,9 +11,8 @@
 
     <strong>Nr of bags:</strong>
     <p>
-      The number of bags the guest has. If the luggages sizes vary then write
-      the number of main suitcases, add a “+” sign followed by the number of
-      other items.
+      The number of bags the guest has. If the luggages sizes vary then write the number of main
+      suitcases, add a “+” sign followed by the number of other items.
     </p>
 
     <strong>Tag nr:</strong>
@@ -21,24 +20,21 @@
 
     <strong>BB in LR:</strong>
     <p>
-      (Bell boy in Luggage room) The initials of the bell boy who placed the
-      luggage in the luggage room.
+      (Bell boy in Luggage room) The initials of the bell boy who placed the luggage in the luggage
+      room.
     </p>
 
     <strong>Location:</strong>
     <p>
-      The location where the luggage has been stored. Can be LR, LR1, S1, Room
-      or other. If other, please add an explanation in the comments.
+      The location where the luggage has been stored. Can be LR, LR1, S1, Room or other. If other,
+      please add an explanation in the comments.
     </p>
 
     <strong>Time in room:</strong>
     <p>When the luggage was placed in the guest's room.</p>
 
     <strong>BB up:</strong>
-    <p>
-      (Bell boy up) The initials of the bell boy who delivered the luggage to
-      the guest's room.
-    </p>
+    <p>(Bell boy up) The initials of the bell boy who delivered the luggage to the guest's room.</p>
 
     <strong>Comments:</strong>
     <p>If something needs further explanation.</p>
@@ -53,9 +49,8 @@
 
     <strong>Nr of bags:</strong>
     <p>
-      The number of bags the guest has. If the luggages sizes vary, please write
-      the number of main suitcases, then add a “+” sign followed by the number
-      of other items.
+      The number of bags the guest has. If the luggages sizes vary, please write the number of main
+      suitcases, then add a “+” sign followed by the number of other items.
     </p>
 
     <strong>Tag nr:</strong>
@@ -63,20 +58,20 @@
 
     <strong>BB in LR:</strong>
     <p>
-      (Bell boy in Luggage room) The initials of the bell boy who placed the
-      luggage in the luggage room.
+      (Bell boy in Luggage room) The initials of the bell boy who placed the luggage in the luggage
+      room.
     </p>
 
     <strong>BB down:</strong>
     <p>
-      (Bell boy down) The initials of the bell boy, who brought the luggage down
-      from the guest's room.
+      (Bell boy down) The initials of the bell boy, who brought the luggage down from the guest's
+      room.
     </p>
 
     <strong>Location:</strong>
     <p>
-      The location of the stored luggage. Can be LR, LR1, S1, Room or other. If
-      others please do a further explanation in the comments.
+      The location of the stored luggage. Can be LR, LR1, S1, Room or other. If others please do a
+      further explanation in the comments.
     </p>
 
     <strong>Time out:</strong>
@@ -84,8 +79,7 @@
 
     <strong>BB out:</strong>
     <p>
-      (Bell boy out) The initials of the bell boy who gave the luggage to the
-      guest at departure.
+      (Bell boy out) The initials of the bell boy who gave the luggage to the guest at departure.
     </p>
 
     <strong>Comments:</strong>
@@ -104,9 +98,8 @@
 
     <strong>Nr of bags:</strong>
     <p>
-      The number of bags the guest has. If the luggages sizes vary, please write
-      the number of main suitcases, then add a “+” sign followed by the number
-      of other items.
+      The number of bags the guest has. If the luggages sizes vary, please write the number of main
+      suitcases, then add a “+” sign followed by the number of other items.
     </p>
 
     <strong>Tag nr:</strong>
@@ -117,14 +110,14 @@
 
     <strong>BB in LR:</strong>
     <p>
-      (Bell boy in Luggage room) The initials of the bell boy who put the
-      luggage in the luggage room.
+      (Bell boy in Luggage room) The initials of the bell boy who put the luggage in the luggage
+      room.
     </p>
 
     <strong>Location:</strong>
     <p>
-      The location of the stored luggage. Can be LR, LR1, S1, Room or other. If
-      others please do a further explanation in the comments.
+      The location of the stored luggage. Can be LR, LR1, S1, Room or other. If others please do a
+      further explanation in the comments.
     </p>
 
     <strong>BB out:</strong>
@@ -158,8 +151,7 @@
 
     <strong>Park exp:</strong>
     <p>
-      (Parking expiration time) The expiration time of the parking registration
-      made in
+      (Parking expiration time) The expiration time of the parking registration made in
       <a href="https://simplyture.com/" target="_blank">SimplyTure.com</a>
     </p>
 
@@ -168,14 +160,13 @@
 
     <strong>BB down:</strong>
     <p>
-      (Bell boy up) The initials of the bell boy who drove the car from the
-      hotel to the parking garage.
+      (Bell boy up) The initials of the bell boy who drove the car from the hotel to the parking
+      garage.
     </p>
 
     <strong>BB up:</strong>
     <p>
-      (Bell boy up) The initials of the bell boy who drove it from the parking
-      garage to the hotel.
+      (Bell boy up) The initials of the bell boy who drove it from the parking garage to the hotel.
     </p>
 
     <strong>Location:</strong>
@@ -188,10 +179,7 @@
     <p>When the car was handed over to the guest.</p>
 
     <strong>BB out:</strong>
-    <p>
-      (Bell boy out) The initials of the bell boy who gave the keys to the
-      guest.
-    </p>
+    <p>(Bell boy out) The initials of the bell boy who gave the keys to the guest.</p>
 
     <strong>Comments:</strong>
     <p>If something needs further explanation.</p>
@@ -217,8 +205,8 @@
 
     <strong>Task:</strong>
     <p>
-      An abbreviation of the task. Can either be RA = room assignment, RM = room
-      move or other. If other do a further explanation in the comment field.
+      An abbreviation of the task. Can either be RA = room assignment, RM = room move or other. If
+      other do a further explanation in the comment field.
     </p>
 
     <strong>Comments:</strong>
@@ -226,8 +214,8 @@
 
     <strong>Received by:</strong>
     <p>
-      The one who gave the bell boy the assignment. Can be reception, guest or
-      other. If other do a further explanation in the comments.
+      The one who gave the bell boy the assignment. Can be reception, guest or other. If other do a
+      further explanation in the comments.
     </p>
 
     <strong>Received at:</strong>
