--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -1,9 +1,7 @@
 <main>
   <div class="table-actions" style="justify-content: end">
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
       <button mat-raised-button class="action-btn" (click)="createAssignment()">
         Add assignment
       </button>
@@ -50,9 +48,7 @@
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Performed at</th>
         <td mat-cell *matCellDef="let item">
-          {{
-            item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '-'
-          }}
+          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
