--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -1,27 +1,13 @@
-<form
-  [formGroup]="updateAssignmentForm"
-  (ngSubmit)="onSubmit()"
-  class="dialog-container"
->
+<form [formGroup]="updateAssignmentForm" (ngSubmit)="onSubmit()" class="dialog-container">
   <h1>Update assignment</h1>
   <hr />
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-        maxlength="10"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" maxlength="10" />
       <mat-error
-        *ngIf="
-          updateAssignmentForm.get('room')?.invalid &&
-          updateAssignmentForm.get('room')?.dirty
-        "
+        *ngIf="updateAssignmentForm.get('room')?.invalid && updateAssignmentForm.get('room')?.dirty"
       >
         Must be a number from 100-999
       </mat-error>
@@ -35,10 +21,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          updateAssignmentForm.get('task')?.invalid &&
-          updateAssignmentForm.get('task')?.dirty
-        "
+        *ngIf="updateAssignmentForm.get('task')?.invalid && updateAssignmentForm.get('task')?.dirty"
       >
         Can't be more than 20 characters
       </mat-error>
@@ -56,8 +39,7 @@
     ></textarea>
     <mat-error
       *ngIf="
-        updateAssignmentForm.get('comments')?.invalid &&
-        updateAssignmentForm.get('comments')?.dirty
+        updateAssignmentForm.get('comments')?.invalid && updateAssignmentForm.get('comments')?.dirty
       "
     >
       Can't be more than 1000 characters
@@ -68,10 +50,7 @@
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Received by</mat-label>
       <mat-select [(value)]="data.receivedBy" formControlName="receivedBy">
-        <mat-option
-          *ngFor="let receivedBy of bbAssignmentReceivedBy"
-          [value]="receivedBy"
-        >
+        <mat-option *ngFor="let receivedBy of bbAssignmentReceivedBy" [value]="receivedBy">
           {{ receivedBy }}
         </mat-option>
       </mat-select>
@@ -113,10 +92,7 @@
         formControlName="receivedAt"
         [max]="maxDatetime"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(receivedAt)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(receivedAt)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #receivedAt
         [showSpinners]="true"
@@ -135,10 +111,7 @@
         formControlName="completedAt"
         [max]="maxDatetime"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(completedAt)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(completedAt)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #completedAt
         [showSpinners]="true"
@@ -158,14 +131,7 @@
   </div>
 
   <div class="dialog-row">
-    <button
-      class="secondary-btn"
-      mat-raised-button
-      mat-dialog-close
-      type="button"
-    >
-      Cancel
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
     <button class="action-btn" mat-raised-button type="submit">Update</button>
   </div>
 </form>
