--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -1,11 +1,7 @@
 <main>
   <div class="table-actions">
     <div>
-      <mat-form-field
-        appearance="fill"
-        style="width: 150px"
-        class="remove-error-message"
-      >
+      <mat-form-field appearance="fill" style="width: 150px" class="remove-error-message">
         <mat-label>Sort By</mat-label>
         <mat-select [(value)]="sortBy" (selectionChange)="fetchCarList()">
           <mat-option value="createdAt">Created at</mat-option>
@@ -15,11 +11,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field
-        autocomplete="off"
-        class="remove-error-message"
-        appearance="fill"
-      >
+      <mat-form-field autocomplete="off" class="remove-error-message" appearance="fill">
         <mat-label>Search</mat-label>
         <input
           type="text"
@@ -33,19 +25,11 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
       <button class="secondary-btn" (click)="toggleShowAll()" mat-raised-button>
         {{ showAll ? 'Show Current' : 'Show All' }}
       </button>
-      <button
-        class="action-btn"
-        (click)="openCreateCarDialog()"
-        mat-raised-button
-      >
-        Add Car
-      </button>
+      <button class="action-btn" (click)="openCreateCarDialog()" mat-raised-button>Add Car</button>
     </div>
   </div>
   <hr />
@@ -54,172 +38,98 @@
     <table mat-table [dataSource]="filteredCarList" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.room }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="tagNr">
         <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.tagNr }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="arrivalDate">
         <th mat-header-cell *matHeaderCellDef>Arr.</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
-          {{
-            element.arrivalDate ? (element.arrivalDate | date : 'dd/MM') : '-'
-          }}
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
+          {{ element.arrivalDate ? (element.arrivalDate | date : 'dd/MM') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="departureDate">
         <th mat-header-cell *matHeaderCellDef>Dep.</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
-          {{
-            element.departureDate
-              ? (element.departureDate | date : 'dd/MM')
-              : '-'
-          }}
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
+          {{ element.departureDate ? (element.departureDate | date : 'dd/MM') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.name }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="licensePlate">
         <th mat-header-cell *matHeaderCellDef>License plate</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.licensePlate }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="expirationDateTime">
         <th mat-header-cell *matHeaderCellDef>Park<br />exp.</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
-          {{
-            element.expirationDate
-              ? (element.expirationDate | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
+          {{ element.expirationDate ? (element.expirationDate | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="pickUpDateTime">
         <th mat-header-cell *matHeaderCellDef>Pick<br />up time</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
-          {{
-            element.pickUpTime
-              ? (element.pickUpTime | date : 'dd/MM HH:mm')
-              : 'Call down'
-          }}
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
+          {{ element.pickUpTime ? (element.pickUpTime | date : 'dd/MM HH:mm') : 'Call down' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbDown">
         <th mat-header-cell *matHeaderCellDef>BB down</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.bbDown ? element.bbDown : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbUp">
         <th mat-header-cell *matHeaderCellDef>BB up</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.bbUp ? element.bbUp : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef>Location</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.location }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="parkingLot">
         <th mat-header-cell *matHeaderCellDef>Lot</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.parkingLot ? element.parkingLot : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="deliveryDateTime">
         <th mat-header-cell *matHeaderCellDef>Delivery<br />time</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
-          {{
-            element.deliveryTime
-              ? (element.deliveryTime | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
+          {{ element.deliveryTime ? (element.deliveryTime | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB out</th>
-        <td
-          mat-cell
-          *matCellDef="let element"
-          (click)="openDialogEdit(element)"
-        >
+        <td mat-cell *matCellDef="let element" (click)="openDialogEdit(element)">
           {{ element.bbOut }}
         </td>
       </ng-container>
