--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -32,14 +32,8 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
-      <button
-        mat-raised-button
-        class="action-btn"
-        (click)="openCheckinCreateDialog()"
-      >
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button mat-raised-button class="action-btn" (click)="openCheckinCreateDialog()">
         Add Check In
       </button>
     </div>
