--- a/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
@@ -1,26 +1,13 @@
-<form
-  (ngSubmit)="onSubmit()"
-  [formGroup]="createCheckinForm"
-  class="dialog-container"
->
+<form (ngSubmit)="onSubmit()" [formGroup]="createCheckinForm" class="dialog-container">
   <h1>Create check in</h1>
   <hr />
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off" class="input" appearance="fill">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('room')?.invalid &&
-          createCheckinForm.get('room')?.dirty
-        "
+        *ngIf="createCheckinForm.get('room')?.invalid && createCheckinForm.get('room')?.dirty"
       >
         Must be a number from 100-999
       </mat-error>
@@ -34,10 +21,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="arrivalTime"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(pickerArrival)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(pickerArrival)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #pickerArrival
         [showSpinners]="true"
@@ -60,18 +44,9 @@
 
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
     <mat-label>Name</mat-label>
-    <input
-      #name
-      type="text"
-      formControlName="name"
-      matInput
-      placeholder="Johnson"
-    />
+    <input #name type="text" formControlName="name" matInput placeholder="Johnson" />
     <mat-error
-      *ngIf="
-        createCheckinForm.get('name')?.invalid &&
-        createCheckinForm.get('name')?.dirty
-      "
+      *ngIf="createCheckinForm.get('name')?.invalid && createCheckinForm.get('name')?.dirty"
     >
       Required
     </mat-error>
@@ -80,18 +55,9 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('bags')?.invalid &&
-          createCheckinForm.get('bags')?.dirty
-        "
+        *ngIf="createCheckinForm.get('bags')?.invalid && createCheckinForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
@@ -99,18 +65,9 @@
 
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Tag nr</mat-label>
-      <input
-        #tagNr
-        type="number"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          createCheckinForm.get('tagNr')?.invalid &&
-          createCheckinForm.get('tagNr')?.dirty
-        "
+        *ngIf="createCheckinForm.get('tagNr')?.invalid && createCheckinForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
@@ -126,10 +83,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          createCheckinForm.get('bbLr')?.invalid &&
-          createCheckinForm.get('bbLr')?.dirty
-        "
+        *ngIf="createCheckinForm.get('bbLr')?.invalid && createCheckinForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
@@ -144,8 +98,7 @@
       </mat-select>
       <mat-error
         *ngIf="
-          createCheckinForm.get('location')?.invalid &&
-          createCheckinForm.get('location')?.dirty
+          createCheckinForm.get('location')?.invalid && createCheckinForm.get('location')?.dirty
         "
       >
         Required
@@ -162,10 +115,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          createCheckinForm.get('bbOut')?.invalid &&
-          createCheckinForm.get('bbOut')?.dirty
-        "
+        *ngIf="createCheckinForm.get('bbOut')?.invalid && createCheckinForm.get('bbOut')?.dirty"
       >
         Required
       </mat-error>
@@ -179,10 +129,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="completedAt"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(pickerCompletedAt)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(pickerCompletedAt)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #pickerCompletedAt
         [showSpinners]="true"
@@ -195,29 +142,17 @@
 
   <mat-form-field autocomplete="off" class="full-width" appearance="fill">
     <mat-label>Comments</mat-label>
-    <textarea
-      type="text"
-      formControlName="comments"
-      matInput
-      placeholder="Comments"
-    ></textarea>
+    <textarea type="text" formControlName="comments" matInput placeholder="Comments"></textarea>
     <mat-error
-      *ngIf="
-        createCheckinForm.get('comments')?.invalid &&
-        createCheckinForm.get('comments')?.dirty
-      "
+      *ngIf="createCheckinForm.get('comments')?.invalid && createCheckinForm.get('comments')?.dirty"
     >
       Can't be more than 1000 characters
     </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
-    <button mat-raised-button class="secondary-btn" mat-dialog-close>
-      Cancel
-    </button>
+    <button mat-raised-button class="secondary-btn" mat-dialog-close>Cancel</button>
 
-    <button mat-raised-button class="action-btn" type="submit">
-      Add check in
-    </button>
+    <button mat-raised-button class="action-btn" type="submit">Add check in</button>
   </div>
 </form>
