--- a/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
@@ -5,13 +5,7 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" class="input" appearance="fill">
       <mat-label class="input-label">Room nr.</mat-label>
-      <input
-        #room
-        type="text"
-        formControlName="room"
-        matInput
-        placeholder="123"
-      />
+      <input #room type="text" formControlName="room" matInput placeholder="123" />
       <mat-error *ngIf="form.get('room')?.invalid && form.get('room')?.dirty">
         Must be a number from 100-999
       </mat-error>
@@ -25,10 +19,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="arrivalTime"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(pickerArrival)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(pickerArrival)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #pickerArrival
         [showSpinners]="true"
@@ -50,42 +41,20 @@
 
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
     <mat-label>Name</mat-label>
-    <input
-      #name
-      type="text"
-      formControlName="name"
-      matInput
-      placeholder="John Doe"
-    />
-    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty">
-      Required
-    </mat-error>
+    <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
+    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
-      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty">
-        Required
-      </mat-error>
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
+      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty"> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Tag nr.</mat-label>
-      <input
-        #tagNr
-        type="number"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
       <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
         Required
       </mat-error>
@@ -100,9 +69,7 @@
           {{ initials }}
         </mat-option>
       </mat-select>
-      <mat-error *ngIf="form.get('bbLr')?.invalid && form.get('bbLr')?.dirty">
-        Required
-      </mat-error>
+      <mat-error *ngIf="form.get('bbLr')?.invalid && form.get('bbLr')?.dirty"> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off" appearance="fill">
@@ -112,9 +79,7 @@
           {{ location }}
         </mat-option>
       </mat-select>
-      <mat-error
-        *ngIf="form.get('location')?.invalid && form.get('location')?.dirty"
-      >
+      <mat-error *ngIf="form.get('location')?.invalid && form.get('location')?.dirty">
         Required
       </mat-error>
     </mat-form-field>
@@ -129,10 +94,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="completedAt"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(pickerCompletedAt)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(pickerCompletedAt)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #pickerCompletedAt
         [showSpinners]="true"
@@ -157,18 +119,11 @@
 
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
     <mat-label>Comments</mat-label>
-    <input
-      type="text"
-      formControlName="comments"
-      matInput
-      placeholder="Comments"
-    />
+    <input type="text" formControlName="comments" matInput placeholder="Comments" />
   </mat-form-field>
 
   <div class="dialog-row">
-    <button class="secondary-btn" mat-raised-button mat-dialog-close>
-      Cancel
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close>Cancel</button>
     <button mat-raised-button type="submit" class="action-btn">Update</button>
   </div>
 </form>
