--- a/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
@@ -1,26 +1,13 @@
-<form
-  (ngSubmit)="onSubmit()"
-  [formGroup]="updateCheckoutForm"
-  class="dialog-container"
->
+<form (ngSubmit)="onSubmit()" [formGroup]="updateCheckoutForm" class="dialog-container">
   <h1>Update Check Out</h1>
   <hr />
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('name')?.invalid &&
-          updateCheckoutForm.get('name')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('name')?.invalid && updateCheckoutForm.get('name')?.dirty"
       >
         Required
       </mat-error>
@@ -28,18 +15,9 @@
 
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bags')?.invalid &&
-          updateCheckoutForm.get('bags')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bags')?.invalid && updateCheckoutForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
@@ -48,18 +26,9 @@
 
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
     <mat-label>Name</mat-label>
-    <input
-      #name
-      type="text"
-      formControlName="name"
-      matInput
-      placeholder="John Doe"
-    />
+    <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
     <mat-error
-      *ngIf="
-        updateCheckoutForm.get('name')?.invalid &&
-        updateCheckoutForm.get('name')?.dirty
-      "
+      *ngIf="updateCheckoutForm.get('name')?.invalid && updateCheckoutForm.get('name')?.dirty"
     >
       Required
     </mat-error>
@@ -68,18 +37,9 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Tag nr.</mat-label>
-      <input
-        #tagNr
-        type="number"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('tagNr')?.invalid &&
-          updateCheckoutForm.get('tagNr')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('tagNr')?.invalid && updateCheckoutForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
@@ -93,10 +53,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bbDown')?.invalid &&
-          updateCheckoutForm.get('bbDown')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bbDown')?.invalid && updateCheckoutForm.get('bbDown')?.dirty"
       >
         Required
       </mat-error>
@@ -113,8 +70,7 @@
       </mat-select>
       <mat-error
         *ngIf="
-          updateCheckoutForm.get('location')?.invalid &&
-          updateCheckoutForm.get('location')?.dirty
+          updateCheckoutForm.get('location')?.invalid && updateCheckoutForm.get('location')?.dirty
         "
       >
         Required
@@ -129,10 +85,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bbLr')?.invalid &&
-          updateCheckoutForm.get('bbLr')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bbLr')?.invalid && updateCheckoutForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
@@ -148,10 +101,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          updateCheckoutForm.get('bbOut')?.invalid &&
-          updateCheckoutForm.get('bbOut')?.dirty
-        "
+        *ngIf="updateCheckoutForm.get('bbOut')?.invalid && updateCheckoutForm.get('bbOut')?.dirty"
       >
         Required
       </mat-error>
@@ -165,10 +115,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="completedAt"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(pickerCompletedAt)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(pickerCompletedAt)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #pickerCompletedAt
         [showSpinners]="true"
@@ -181,20 +128,11 @@
 
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
     <mat-label>Comments</mat-label>
-    <textarea
-      type="text"
-      formControlName="comments"
-      matInput
-      placeholder="Comments"
-    ></textarea>
+    <textarea type="text" formControlName="comments" matInput placeholder="Comments"></textarea>
   </mat-form-field>
 
   <div class="dialog-row">
-    <button mat-raised-button class="secodary-btn" mat-dialog-close>
-      Cancel
-    </button>
-    <button mat-raised-button class="secondary-btn" type="submit">
-      Update
-    </button>
+    <button mat-raised-button class="secodary-btn" mat-dialog-close>Cancel</button>
+    <button mat-raised-button class="secondary-btn" type="submit">Update</button>
   </div>
 </form>
