--- a/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
@@ -10,19 +10,9 @@
   <div class="dialog-row">
     <mat-form-field appearance="fill">
       <mat-label>Room nr.</mat-label>
-      <input
-        #room
-        type="number"
-        formControlName="room"
-        matInput
-        placeholder="123"
-        maxlength="10"
-      />
+      <input #room type="number" formControlName="room" matInput placeholder="123" maxlength="10" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('room')?.invalid &&
-          createLongTermForm.get('room')?.dirty
-        "
+        *ngIf="createLongTermForm.get('room')?.invalid && createLongTermForm.get('room')?.dirty"
       >
         Must be a number from 100-999
       </mat-error>
@@ -36,10 +26,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="arrivalTime"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(arrivalTimePicker)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(arrivalTimePicker)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #arrivalTimePicker
         [showSpinners]="true"
@@ -53,41 +40,19 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label class="input-label">Name</mat-label>
-      <input
-        #name
-        type="text"
-        formControlName="name"
-        matInput
-        placeholder="John Doe"
-      />
+      <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('name')?.invalid &&
-          createLongTermForm.get('name')?.dirty
-        "
+        *ngIf="createLongTermForm.get('name')?.invalid && createLongTermForm.get('name')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      appearance="fill"
-    >
+    <mat-form-field autocomplete="off" class="input one-third" appearance="fill">
       <mat-label class="input-label">Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('bags')?.invalid &&
-          createLongTermForm.get('bags')?.dirty
-        "
+        *ngIf="createLongTermForm.get('bags')?.invalid && createLongTermForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
@@ -95,24 +60,11 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      appearance="fill"
-    >
+    <mat-form-field autocomplete="off" class="input one-third" appearance="fill">
       <mat-label class="input-label">Tag nr</mat-label>
-      <input
-        #tagNr
-        type="text"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="text" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          createLongTermForm.get('tagNr')?.invalid &&
-          createLongTermForm.get('tagNr')?.dirty
-        "
+        *ngIf="createLongTermForm.get('tagNr')?.invalid && createLongTermForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
@@ -126,10 +78,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="dateNeeded"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(dateNeededPicker)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(dateNeededPicker)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #dateNeededPicker
         [showSpinners]="true"
@@ -141,11 +90,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      appearance="fill"
-    >
+    <mat-form-field autocomplete="off" class="input one-third" appearance="fill">
       <mat-label class="input-label">BB in LR</mat-label>
       <mat-select formControlName="bbLr">
         <mat-option *ngFor="let initials of bbInitials" [value]="initials">
@@ -153,10 +98,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          createLongTermForm.get('bbLr')?.invalid &&
-          createLongTermForm.get('bbLr')?.dirty
-        "
+        *ngIf="createLongTermForm.get('bbLr')?.invalid && createLongTermForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
@@ -171,8 +113,7 @@
       </mat-select>
       <mat-error
         *ngIf="
-          createLongTermForm.get('location')?.invalid &&
-          createLongTermForm.get('location')?.dirty
+          createLongTermForm.get('location')?.invalid && createLongTermForm.get('location')?.dirty
         "
       >
         Required
@@ -192,16 +133,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <button
-      class="secondary-btn"
-      mat-raised-button
-      mat-dialog-close
-      type="button"
-    >
-      Cancel
-    </button>
-    <button class="action-btn" mat-raised-button type="submit">
-      Add long term
-    </button>
+    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
+    <button class="action-btn" mat-raised-button type="submit">Add long term</button>
   </div>
 </form>
