--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -31,9 +31,7 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">
-        Table info
-      </button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
       <button class="secondary-btn" (click)="toggleShowAll()" mat-raised-button>
         {{ showAll ? 'Show Current' : 'Show All' }}
       </button>
@@ -92,11 +90,7 @@
       <ng-container matColumnDef="dateNeeded">
         <th mat-header-cell *matHeaderCellDef>Date needed</th>
         <td mat-cell *matCellDef="let luggage">
-          {{
-            luggage.dateNeeded
-              ? (luggage.dateNeeded | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+          {{ luggage.dateNeeded ? (luggage.dateNeeded | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
@@ -122,11 +116,7 @@
       <ng-container matColumnDef="dateOut">
         <th mat-header-cell *matHeaderCellDef>Date out</th>
         <td mat-cell *matCellDef="let luggage">
-          {{
-            luggage.completedAt
-              ? (luggage.completedAt | date : 'dd/MM HH:mm')
-              : '-'
-          }}
+          {{ luggage.completedAt ? (luggage.completedAt | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
