--- a/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
@@ -22,10 +22,7 @@
       data-cy="input-field-room"
     />
     <mat-error
-      *ngIf="
-        updateLongTermForm.get('room')?.invalid &&
-        updateLongTermForm.get('room')?.dirty
-      "
+      *ngIf="updateLongTermForm.get('room')?.invalid && updateLongTermForm.get('room')?.dirty"
     >
       Must be a number from 100-999
     </mat-error>
@@ -34,41 +31,19 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label class="input-label">Name</mat-label>
-      <input
-        #name
-        type="text"
-        formControlName="name"
-        matInput
-        placeholder="John Doe"
-      />
+      <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('name')?.invalid &&
-          updateLongTermForm.get('name')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('name')?.invalid && updateLongTermForm.get('name')?.dirty"
       >
         Required
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      appearance="fill"
-    >
+    <mat-form-field autocomplete="off" class="input one-third" appearance="fill">
       <mat-label class="input-label">Nr of bags</mat-label>
-      <input
-        #bags
-        type="text"
-        formControlName="bags"
-        matInput
-        placeholder="1+3"
-      />
+      <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('bags')?.invalid &&
-          updateLongTermForm.get('bags')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('bags')?.invalid && updateLongTermForm.get('bags')?.dirty"
       >
         Required
       </mat-error>
@@ -76,24 +51,11 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      appearance="fill"
-    >
+    <mat-form-field autocomplete="off" class="input one-third" appearance="fill">
       <mat-label class="input-label">Tag nr</mat-label>
-      <input
-        #tagNr
-        type="text"
-        formControlName="tagNr"
-        matInput
-        placeholder="123"
-      />
+      <input #tagNr type="text" formControlName="tagNr" matInput placeholder="123" />
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('tagNr')?.invalid &&
-          updateLongTermForm.get('tagNr')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('tagNr')?.invalid && updateLongTermForm.get('tagNr')?.dirty"
       >
         Required
       </mat-error>
@@ -107,10 +69,7 @@
         placeholder="dd/MM HH:mm"
         formControlName="dateNeeded"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(dateNeeded)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(dateNeeded)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #dateNeeded
         [showSpinners]="true"
@@ -122,11 +81,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      appearance="fill"
-    >
+    <mat-form-field autocomplete="off" class="input one-third" appearance="fill">
       <mat-label class="input-label">BB in LR</mat-label>
       <mat-select [(value)]="data.bbLr" formControlName="bbLr">
         <mat-option *ngFor="let initials of bbInitials" [value]="initials">
@@ -134,10 +89,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('bbLr')?.invalid &&
-          updateLongTermForm.get('bbLr')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('bbLr')?.invalid && updateLongTermForm.get('bbLr')?.dirty"
       >
         Required
       </mat-error>
@@ -152,8 +104,7 @@
       </mat-select>
       <mat-error
         *ngIf="
-          updateLongTermForm.get('location')?.invalid &&
-          updateLongTermForm.get('location')?.dirty
+          updateLongTermForm.get('location')?.invalid && updateLongTermForm.get('location')?.dirty
         "
       >
         Required
@@ -162,11 +113,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field
-      autocomplete="off"
-      class="input one-third"
-      appearance="fill"
-    >
+    <mat-form-field autocomplete="off" class="input one-third" appearance="fill">
       <mat-label class="input-label">BB out</mat-label>
       <mat-select [(value)]="data.bbOut" formControlName="bbOut">
         <mat-option *ngFor="let initials of bbInitials" [value]="initials">
@@ -174,10 +121,7 @@
         </mat-option>
       </mat-select>
       <mat-error
-        *ngIf="
-          updateLongTermForm.get('bbOut')?.invalid &&
-          updateLongTermForm.get('bbOut')?.dirty
-        "
+        *ngIf="updateLongTermForm.get('bbOut')?.invalid && updateLongTermForm.get('bbOut')?.dirty"
       >
         Required
       </mat-error>
@@ -192,10 +136,7 @@
         formControlName="dateOut"
         [max]="maxDatetime"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(dateOut)"
-      ></mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="$any(dateOut)"></mat-datepicker-toggle>
       <ngx-mat-datetime-picker
         #dateOut
         [showSpinners]="true"
