--- a/apps/frontend/src/app/pages/page-not-found/page-not-found.component.html
+++ b/apps/frontend/src/app/pages/page-not-found/page-not-found.component.html
@@ -3,29 +3,15 @@
 
   <h2>Page not found</h2>
   <p>
-    I tried to catch some fog, but I mist. If you are having issues, feel free
-    to send us an e-mail at:
+    I tried to catch some fog, but I mist. If you are having issues, feel free to send us an e-mail
+    at:
   </p>
-  <a
-    id="mailto"
-    class="link"
-    href="mailto:helpomnihost.dk"
-    target="_blank"
-    rel="noopener"
-  >
+  <a id="mailto" class="link" href="mailto:helpomnihost.dk" target="_blank" rel="noopener">
     helpomnihost.dk
   </a>
 
   <div class="m-1">
-    <button
-      mat-raised-button
-      class="mr-1 secondary-btn"
-      onclick="history.back()"
-    >
-      Back
-    </button>
-    <a mat-raised-button class="action-btn" routerLink="/dashboard"
-      >Dashboard</a
-    >
+    <button mat-raised-button class="mr-1 secondary-btn" onclick="history.back()">Back</button>
+    <a mat-raised-button class="action-btn" routerLink="/dashboard">Dashboard</a>
   </div>
 </div>
